[gd_scene load_steps=23 format=2]

[ext_resource path="res://terrain/Grass.jpg" type="Texture" id=1]
[ext_resource path="res://assets/structures/StoneWall/WallSegmentStraight.tscn" type="PackedScene" id=2]
[ext_resource path="res://scripts/Camera.gd" type="Script" id=3]
[ext_resource path="res://scripts/building/WallBuilder.gd" type="Script" id=4]
[ext_resource path="res://assets/structures/StoneWall/WallSegmentDiagonal.tscn" type="PackedScene" id=5]
[ext_resource path="res://shaders/building_grid.tres" type="Shader" id=6]
[ext_resource path="res://default_env.tres" type="Environment" id=7]
[ext_resource path="res://scripts/building/WallMonitor.gd" type="Script" id=8]
[ext_resource path="res://scripts/building/MarkerVisualiser.gd" type="Script" id=9]
[ext_resource path="res://world/markers/WallConnectorMarker.tscn" type="PackedScene" id=10]
[ext_resource path="res://assets/structures/StoneWall/Wall90Straight.tscn" type="PackedScene" id=11]
[ext_resource path="res://assets/structures/StoneWall/Wall90Diagonal.tscn" type="PackedScene" id=12]
[ext_resource path="res://assets/structures/StoneWall/Wall45Left.tscn" type="PackedScene" id=13]
[ext_resource path="res://assets/structures/StoneWall/Wall45Right.tscn" type="PackedScene" id=14]
[ext_resource path="res://UI.tscn" type="PackedScene" id=15]

[sub_resource type="PlaneMesh" id=1]

[sub_resource type="SpatialMaterial" id=2]
albedo_texture = ExtResource( 1 )
uv1_scale = Vector3( 10, 10, 0 )

[sub_resource type="ConvexPolygonShape" id=3]
points = PoolVector3Array( 1, 0, 1, -1, 0, 1, 1, 0, -1, -1, 0, -1 )

[sub_resource type="CylinderMesh" id=4]

[sub_resource type="PlaneMesh" id=5]

[sub_resource type="ShaderMaterial" id=6]
shader = ExtResource( 6 )
shader_param/GridScale = 0.5
shader_param/GridTint = Color( 0.109804, 1, 1, 1 )
shader_param/Sharpness = 24.0
shader_param/FadeFactor = 2.5

[sub_resource type="ShaderMaterial" id=7]
shader = ExtResource( 6 )
shader_param/GridScale = 1.0
shader_param/GridTint = Color( 0.109804, 1, 0.768627, 1 )
shader_param/Sharpness = 24.0
shader_param/FadeFactor = 2.5

[node name="Spatial" type="Spatial"]

[node name="UI" parent="." instance=ExtResource( 15 )]
visible = false

[node name="Ground" type="MeshInstance" parent="."]
transform = Transform( 50, 0, 0, 0, 50, 0, 0, 0, 50, 0, 0, 0 )
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="StaticBody" type="StaticBody" parent="Ground"]
collision_layer = 33

[node name="CollisionShape" type="CollisionShape" parent="Ground/StaticBody"]
shape = SubResource( 3 )

[node name="Camera Target" type="Spatial" parent="."]
script = ExtResource( 3 )
scale_range = Vector2( 0.6, 2 )
scale_zoom_speed = 2.0
rotate_speed = 0.01

[node name="Camera" type="Camera" parent="Camera Target"]
transform = Transform( 1, 0, 0, 0, 0.5, 0.866025, 0, -0.866025, 0.5, 0, 16, 9.2 )
environment = ExtResource( 7 )
current = true
fov = 45.0
size = 10.0
far = 64.0

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 0.247298, 0.860077, -0.446219, -0.214956, 0.497746, 0.840263, 0.944795, -0.111878, 0.307971, 0, 0, 0 )
light_color = Color( 0.768627, 0.768627, 0.768627, 1 )
shadow_enabled = true
shadow_color = Color( 0.184314, 0.184314, 0.184314, 1 )
shadow_bias = 0.02
directional_shadow_mode = 0
directional_shadow_normal_bias = 0.16

[node name="Wall Builder" type="Spatial" parent="."]
script = ExtResource( 4 )
raycast_mask = 32
available_marker_visualisers = PoolStringArray( "Wall Connectors Visualiser" )
straight_segment = ExtResource( 2 )
diagonal_segment = ExtResource( 5 )
straight_90 = ExtResource( 11 )
diagonal_90 = ExtResource( 12 )
left_45 = ExtResource( 13 )
right_45 = ExtResource( 14 )

[node name="Marker" type="MeshInstance" parent="Wall Builder"]
transform = Transform( 0.1, 0, 0, 0, 5, 0, 0, 0, 0.1, 0, 0, 0 )
mesh = SubResource( 4 )
material/0 = null

[node name="LargeGrid" type="MeshInstance" parent="Wall Builder/Marker"]
transform = Transform( 100, 0, 0, 0, 1, 0, 0, 0, 100, 0, 0.001, 0 )
cast_shadow = 0
mesh = SubResource( 5 )
material/0 = SubResource( 6 )

[node name="SmallGrid" type="MeshInstance" parent="Wall Builder/Marker"]
transform = Transform( 100, 0, 0, 0, 1, 0, 0, 0, 100, 0, 0.001, 0 )
cast_shadow = 0
mesh = SubResource( 5 )
material/0 = SubResource( 7 )

[node name="WallMonitor" type="Spatial" parent="Wall Builder"]
script = ExtResource( 8 )

[node name="Wall Connectors Visualiser" type="Spatial" parent="Wall Builder"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.025, 0 )
script = ExtResource( 9 )
marker_resource = ExtResource( 10 )
[connection signal="add_wall_connection" from="Wall Builder/WallMonitor" to="Wall Builder/Wall Connectors Visualiser" method="register_marker"]
[connection signal="remove_wall_connection" from="Wall Builder/WallMonitor" to="Wall Builder/Wall Connectors Visualiser" method="unregister_marker"]
